--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,7 @@ require:
   - "rubocop-performance"
 
 AllCops:
-  DisabledByDefault: true
+  NewCops: enable
   Exclude:
     - "**/templates/**/*"
     - "**/vendor/**/*"
@@ -19,12 +19,5 @@ AllCops:
     - tmp/**/*
     - bin/**/*
 
-Style/FrozenStringLiteralComment:
-  Enabled: true
-
-Style/StringLiterals:
-  EnforcedStyle: single_quotes
-  Enabled: true
-
-Layout/EmptyLineAfterMagicComment:
-  Enabled: true
+Style/Documentation:
+  Enabled: false
