--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.3.0
+          ruby-version: 3.3.7
           bundler-cache: true
 
       - name: Lint Ruby files
         run: bundle exec rubocop --parallel
 
       - name: Lint ERB files
-        run: bundle exec erblint --lint-all
+        run: bundle exec erb_lint --lint-all
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
