記事リストのテストを追加

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,9 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Enabled: false
 
+RSpec/ContextWording:
+  Enabled: false
+
 Metrics/AbcSize:
   Max: 25
 
